運用の基本となるシェルスクリプトをコミット