@@ -1,7 +1,2 @@
 #!/bin/bash
-
-#minecraft-server-forgeのスタート用のスクリプト作ってみるよー(´･ω･)っ
-#2017.6.1 起動可能であることを確認　(眞子)
-
-java -Xms4G -Xmx4G  -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:-UseAdaptiveSizePolicy -Xmn512M -XX:PermSize=512M -jar minecraft-server-forge.jar
-
+java -Xmx1024M -Xms1024M -jar forge-1.7.2-10.12.1.1060-universal.jar
